# vldb25

./: .gitattributes  README.md
prototype/: run_client.py  skystore_cli.py
prototype/experiment/trace/: versionate.py
prototype/s3-proxy/: Cargo.toml  README.md  justfile
prototype/s3-proxy/src/: main.rs  objstore_client.rs  skyproxy.rs  skyproxy_test.rs  stream_utils.rs  type_utils.rs
prototype/s3-proxy/src/client_impls/: azure.rs  gcp.rs  mod.rs  s3.rs
prototype/s3-proxy/src/utils/: stream_utils.rs  type_utils.rs
prototype/s3-proxy/test/: init_config.json  init_config2.json  init_config3.json  init_manual.json  register_config.json  register_config2.json  register_config3.json  register_config4.json  register_empty.json  register_manual.json
prototype/store-server/: app.py  conf.py  justfile  register.py  requirements.txt  utils.py
simulation/: .gitignore  .gitmodules  README.md  main.py  requirements.txt  setup.py
simulation/SNIA_traces/: IBMObjectStoreSample  README.md  change_regions.py  mc_7days.ymal  multi_cloud_trace.py  multi_cloud_trace_new.py  new_trace_gen.py  parser_aug_data.py  parser_data.py  post_stats.py  range_count.py  res_range_count.csv  run_stats.py  split_regions.py  stats.py  synthetic_trace.py
simulation/SNIA_traces/Documentation/: CHANGE_REGIONS.md  EVICT_POLICY.md  MULTI_TRACE.md  MULTI_TRACE_new.md  (+1 more)
simulation/benchmark/: README.md  benchmark.json  benchmark_obj_store.py  collect_aws.mjs
simulation/config/: all.yaml  alwaysevict.yaml  alwaysstore.yaml  dynamicttl.yaml  ewma.yaml  fixedttl_12hr.yaml  fixedttl_1hr.yaml  lru.yaml  optimal.yaml  single.yaml  skypie.yaml  spanstore.yaml  teven.yaml  tevict.yaml  tevict_2reg.yaml  tevict_6reg.yaml  tevict_9reg.yaml  tevict_window.yaml  tevictranges.yaml  tevictranges_2reg.yaml  tevictranges_9reg.yaml  to_keep.yaml
simulation/src/: simulator_v2.py
(+118 files in other folders)
