[package]
name = "sky-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
async-trait = "0.1.68"
aws-config = "0.55.3"
aws-credential-types = "0.55.3"
aws-sdk-s3 = "0.28.0"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
reqwest = "0.11.17"
s3s = { git = "https://github.com/Nugine/s3s.git", rev = "e8bba54fe291664f73566235354002eb02002a75" }
s3s-aws = { git = "https://github.com/Nugine/s3s.git", rev = "e8bba54fe291664f73566235354002eb02002a75" }
serde = "1.0.160"
serde_json = "1.0.96"
syn = "2.0.15"
tokio = { version = "1.28.0", features = ["full"] }
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
skystore-rust-client = { path = "../generated/skystore-rust-client" }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.21"
serial_test = "2.0.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
bytes = "1.4.0"
flo_stream = "0.7.0"
azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "4849d7937edb8a95bbdfb85e1837c7606c83f57b" }
azure_storage =  { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "4849d7937edb8a95bbdfb85e1837c7606c83f57b" }
azure_core =  { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "4849d7937edb8a95bbdfb85e1837c7606c83f57b" }
futures = "0.3.28"
uuid = "1.3.3"
hex = "0.4.3"
google-cloud-storage = "0.11.0"
google-cloud-default = { version = "0.2.0", features = ["storage"] }
futures-lite = "1.13.0"
percent-encoding = "2.1.0"
hyper-rustls = { version = "*", features = ["webpki-roots", "http2", "webpki-tokio"] }
aws-smithy-client = "0.55.3"